Upgrade libs to use networking/v1 instead extensions/v1beta1

--- a/examples/notifications/rollout-canary.yaml
+++ b/examples/notifications/rollout-canary.yaml
@@ -15,7 +15,7 @@ spec:
   selector:
     app: rollout-canary
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: rollouts-demo-stable
