--- a/examples/traffic-routing-experiment-step/rollout-smi-experiment-step.yaml
+++ b/examples/traffic-routing-experiment-step/rollout-smi-experiment-step.yaml
@@ -28,7 +28,7 @@ spec:
     # This selector will be updated with the pod-template-hash of the stable ReplicaSet. e.g.:
     # rollouts-pod-template-hash: 789746c88d
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: rollout-smi-experiment-stable
