--- a/examples/traffic-routing-experiment-step/rollout-alb-experiment-step.yaml
+++ b/examples/traffic-routing-experiment-step/rollout-alb-experiment-step.yaml
@@ -40,7 +40,7 @@ spec:
   selector:
     app: alb-rollout
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: alb-rollout-ingress
