--- a/pkg/kubectl-argo-rollouts/info/testdata/canary/old-rs.yaml
+++ b/pkg/kubectl-argo-rollouts/info/testdata/canary/old-rs.yaml
@@ -19,7 +19,7 @@ metadata:
     name: canary-demo
     uid: b350ba76-f6ed-11e9-a15b-42010aa80033
   resourceVersion: "28253220"
-  selfLink: /apis/extensions/v1beta1/namespaces/jesse-test/replicasets/canary-demo-859c99b45c
+  selfLink: /apis/networking.k8s.io/v1/namespaces/jesse-test/replicasets/canary-demo-859c99b45c
   uid: 4606e4bc-f7d1-11e9-a15b-42010aa80033
 spec:
   replicas: 0
