--- a/pkg/kubectl-argo-rollouts/info/testdata/canary/stable-rs.yaml
+++ b/pkg/kubectl-argo-rollouts/info/testdata/canary/stable-rs.yaml
@@ -20,7 +20,7 @@ metadata:
     name: canary-demo
     uid: b350ba76-f6ed-11e9-a15b-42010aa80033
   resourceVersion: "28253205"
-  selfLink: /apis/extensions/v1beta1/namespaces/jesse-test/replicasets/canary-demo-877894d5b
+  selfLink: /apis/networking.k8s.io/v1/namespaces/jesse-test/replicasets/canary-demo-877894d5b
   uid: 58286b27-f7cd-11e9-a15b-42010aa80033
 spec:
   replicas: 5
