--- a/test/e2e/functional/alb-bluegreen-rollout.yaml
+++ b/test/e2e/functional/alb-bluegreen-rollout.yaml
@@ -26,7 +26,7 @@ spec:
   selector:
     app: alb-bluegreen
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: alb-bluegreen-ingress
