--- a/test/e2e/functional/alb-canary-rollout.yaml
+++ b/test/e2e/functional/alb-canary-rollout.yaml
@@ -40,7 +40,7 @@ spec:
   selector:
     app: alb-canary
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: alb-canary-ingress
