--- a/test/e2e/functional/canary-dynamic-stable-scale.yaml
+++ b/test/e2e/functional/canary-dynamic-stable-scale.yaml
@@ -38,7 +38,7 @@ spec:
   selector:
     app: dynamic-stable-scale
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: dynamic-stable-scale-ingress
