--- a/test/e2e/functional/canary-scaledowndelay.yaml
+++ b/test/e2e/functional/canary-scaledowndelay.yaml
@@ -40,7 +40,7 @@ spec:
   selector:
     app: canary-scaledowndelay
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: canary-scaledowndelay-ingress
