--- a/test/e2e/functional/nginx-template.yaml
+++ b/test/e2e/functional/nginx-template.yaml
@@ -26,7 +26,7 @@ spec:
   selector:
     app: REPLACEME
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: REPLACEME-ingress
