--- a/test/kustomize/rollout/expected.yaml
+++ b/test/kustomize/rollout/expected.yaml
@@ -280,7 +280,7 @@ spec:
     kind: Rollout
     name: my-guestbook
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -351,7 +351,7 @@ spec:
         host: guestbook-canary-svc
       weight: 0
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
